fix: fix lightbox on mobile safari browsers

--- a/components/Lightbox/Lightbox.module.css
+++ b/components/Lightbox/Lightbox.module.css
@@ -3,8 +3,14 @@
 	transform-origin: center center;
 }
 
+@media screen and (min-width:320px) and (max-width:960px) {
+	.lightbox {
+		@apply p-0 mx-auto h-auto;
+	}
+}
+
 @media screen and (min-width:320px) and (max-width:960px) and (orientation:landscape) {
 	.lightbox {
-		@apply p-0 mx-auto w-[65%];
+		@apply p-0 mx-auto h-auto w-[65%];
 	}
 }
